prevent users interacting with elements behind polling modal like view

--- a/bigbluebutton-html5/imports/ui/components/polling/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/polling/styles.scss
@@ -17,6 +17,7 @@
   pointer-events: none;
 
   @include mq($hasPhoneDimentions) {
+    pointer-events: auto;
     background-color: rgba(0, 0, 0, var(--overlayOpacity));
   }
 }
